msa-deploy/flask-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-deployment
  labels:
    app: flask
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: flask
  strategy: {}
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
      - image: jojo0528/flask:latest
        name: flask
        ports:
        - containerPort: 5000
        imagePullPolicy: Always
