msa-deploy/front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-react-deployment
  labels:
    app: nginx-react
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: nginx-react
  strategy: {}
  template:
    metadata:
      labels:
        app: nginx-react
    spec:
      containers:
      - image: hojin19082/restful_front:14
        name: restful-front
        ports:
        - containerPort: 443
        imagePullPolicy: Always
