msa-deploy/msa-post-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: msa-post-deployment
  labels:
    app: msa-post
spec:
  replicas: 1
  selector:
    matchLabels:
      app: msa-post
  template:
    metadata:
      labels:
        app: msa-post
    spec:
      containers:
      - name: msa-post
        image: hojin19082/msa-post:22
        ports:
        - containerPort: 8081
        imagePullPolicy: Always
