msa-deploy/msa-respondent-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: msa-respondent-deployment
  labels:
    app: msa-respondent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: msa-respondent
  template:
    metadata:
      labels:
        app: msa-respondent
    spec:
      containers:
      - name: msa-respondent
        image: hojin19082/msa-respondent:18
        ports:
        - containerPort: 8084
        imagePullPolicy: Always
