msa-deploy/msa-survey-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: msa-survey-deployment
  labels:
    app: msa-survey
spec:
  replicas: 1
  selector:
    matchLabels:
      app: msa-survey
  template:
    metadata:
      labels:
        app: msa-survey
    spec:
      containers:
      - name: msa-survey
        image: hojin19082/msa-survey:67
        ports:
        - containerPort: 8082
        imagePullPolicy: Always
