msa-deploy/msa-user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: msa-user-deployment
  labels:
    app: msa-user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: msa-user
  template:
    metadata:
      labels:
        app: msa-user
    spec:
      containers:
      - name: msa-user
        image: hojin19082/msa-user:17
        ports:
        - containerPort: 8083
        imagePullPolicy: Always
