msa-deploy/flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
spec:
  ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: 5000
  selector:
    app: flask
