msa-deploy/front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-react-service
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
    - name: https
      port: 443
      protocol: TCP
      targetPort: 443
  selector:
    app: nginx-react
  type: LoadBalancer
