msa-deploy/msa-auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: msa-auth-service
  labels:
    app: msa-auth
spec:
  selector:
    app: msa-auth
  ports: 
  - port: 80
    protocol: TCP
    targetPort: 8080
