msa-deploy/msa-post-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: msa-post-service
spec:
  selector:
    app: msa-post
  ports:  
  - port: 8081
    protocol: TCP
    targetPort: 8081
