msa-deploy/msa-respondent-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: msa-respondent-service
spec:
  selector:
    app: msa-respondent
  ports:  
  - port: 443
    protocol: TCP
    targetPort: 8084
