msa-deploy/msa-survey-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: msa-survey-service
spec:
  selector:
    app: msa-survey
  ports:  
  - port: 443
    protocol: TCP
    targetPort: 8082
