msa-deploy/msa-user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: msa-user-service
spec:
  selector:
    app: msa-user
  ports: 
  - port: 443
    protocol: TCP
    targetPort: 8083
