msa-deploy/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/auth-url: https://210.109.60.160/auth
    nginx.ingress.kubernetes.io/proxy-body-size: 500m
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://www.commfy.shop, https://localhost:3000"
    nginx.ingress.kubernetes.io/cors-allow-headers: "accesstoken,refreshtoken,withcredentials,content-type"
    nginx.ingress.kubernetes.io/cors-allow-methods: "*"
    nginx.ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/configuration-snippet: |
        more_set_headers 'Auth-Token: $auth_cookie';
        more_set_headers 'Access-Control-Expose-Headers: auth-token';
spec:
  rules:
  - http:
      paths:
      - path: /selectSurvey
        pathType: Prefix
        backend:
          service:
            name: msa-post-service
            port: 
              number: 443
          
      - path: /posting
        pathType: Prefix
        backend:
          service:
            name: msa-post-service
            port: 
              number: 443
          
      - path: /createPost
        pathType: Prefix
        backend:
          service:
            name: msa-post-service
            port: 
              number: 443
          
      - path: /survey
        pathType: Prefix
        backend:
          service:
            name: msa-survey-service
            port: 
              number: 443
          
      - path: /created-survey
        pathType: Prefix
        backend:
          service:
            name: msa-survey-service
            port: 
              number: 443
          
      - path: /bookmark
        pathType: Prefix
        backend:
          service:
            name: msa-post-service
            port: 
              number: 443
      
      - path: /myPage
        pathType: Prefix
        backend:
          service:
            name: msa-post-service
            port: 
              number: 443
          
      - path: /respondent
        pathType: Prefix
        backend:
          service:
            name: msa-respondent-service
            port: 
              number: 443
          
      - path: /surveys
        pathType: Prefix
        backend:
          service:
            name: msa-survey-service
            port: 
              number: 443
          
      - path: /result
        pathType: Prefix
        backend:
          service:
            name: msa-respondent-service
            port: 
              number: 443
              
      - path: /load
        pathType: Prefix
        backend:
          service:
            name: msa-survey-service
            port: 
              number: 443
      
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-not-need-login
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://www.commfy.shop, http://localhost:3000"
    nginx.ingress.kubernetes.io/cors-allow-headers: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "*"   
    nginx.ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"      
spec:
  tls:
  - hosts:
    - www.commfy.shop
    secretName: comfytls
  rules:
  - http:
      paths:
      - path: /community
        pathType: Prefix
        backend:
          service:
            name: msa-post-service
            port: 
              number: 443
          
      - path: /post
        pathType: Prefix
        backend:
          service:
            name: msa-post-service
            port: 
              number: 443
          
      - path: /search
        pathType: Prefix
        backend:
          service:
            name: msa-post-service
            port: 
              number: 443

      - path: /login
        pathType: Prefix
        backend:
          service:
            name: msa-user-service
            port: 
              number: 443
      
      - path: /logout
        pathType: Prefix
        backend:
          service:
            name: msa-user-service
            port: 
              number: 443

      - path: /api/deletesurvey
        pathType: Prefix
        backend:
          service:
            name: msa-respondent-service
            port: 
              number: 443
      
      - path: /react_to_flask
        pathType: Prefix
        backend:
          service:
            name: flask-service
            port: 
              number: 443
